                    (inspired by a patch from Yura Siamashka).
 * src/plugindata.h, src/plugins.c:
   Add document_set_text_changed() to the plugin API.
 * src/main.c, src/utils.c, src/utils.h, src/win32.c, src/win32.h:
   Fix crashes on Windows when configuration directory could not be
   created.
   Fix problems when configuration directory path contains special
   characters.


2007-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c:
   Show line wrap symbol at start of line for wrapped lines.
 * src/templates.c, src/highlighting.c, src/highlighting.h,
   src/filetypes.c, src/filetypes.h, src/document.c, src/main.c:
   Fix bug with using the default extension, not the user set one, if
   'New with template' is used before any documents of the same filetype
   are open.
   Load filetype keyfiles from filetypes_load_config(), not from
   styleset_foo_init().
   Add highlighting_init_styles(), highlighting_set_styles(),
   simplifying a lot of styleset function code.
   Remove filetype::style_func_ptr field.


2007-11-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c, src/makefile.win32: Add exit code detection for Windows.
 * src/keyfile.c: Fix broken window maximization.
 * src/document.c: Remove Scintilla keybinding Alt-Backspace for Undo.


2007-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Prevent prefs dialog being hidden after using the prefs file dialog.
 * src/build.c, src/prefs.c:
   Enable build support on Windows.
 * src/document.c:
   Ensure document_update_tag_list() always shows the empty symbol list
   when tags cannot be parsed.
 * src/filetypes.c, doc/geany.txt, doc/geany.html, data/filetypes.*:
   Add configurable default file extension setting for filetype
   definition files.
   Note: There is a bug with using the default extension, not the user
   set one, if 'New with template' is used before any documents of the
   same filetype are open.

